# poetry-fastapi-demo

./: Dockerfile  README.md  log.yaml  pyproject.toml
.github/workflows/: dev-ci.yml  python-package.yml  release-deploy.yml  release-pkg.yml
poetry_fast_demo/: main.py
poetry_fastapi_demo/: __init__.py  main.py
poetry_fastapi_demo/models/: user.py
poetry_fastapi_demo/routers/: __init__.py  user.py
poetry_fastapi_demo/tables/: __init__.py  user.py
tests/: test_module1.py  test_user_table.py
