[tool.poetry] #项目信息
name = "poetry-fastapi-demo"
version = "0.1.0"
description = "A web project template using poetry and fastapi."
authors = ["robocanic <robocanic@example.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]  #主要依赖
python = "~3.10"


[build-system]  # 构建工具
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
